fix text size to avoid overflow

--- a/static/css/quickie-workouts.css
+++ b/static/css/quickie-workouts.css
@@ -36,7 +36,7 @@
 
 .stepText {
   color: #CCC;
-  font-size: 22px;
+  font-size: 20px;
   text-decoration: underline;
 }
 
@@ -47,7 +47,7 @@
 }
 
 .repsExercise {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .quickieWorkoutInfo {
